--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -23,7 +23,7 @@
         <div class="card-body">
           <h5 class="card-title">CYMAN Files</h5>
           <div class="custom-file mb-3">
-            <input type="file" class="custom-file-input" id="cymanFiles" multiple (change)="onCymanFileChange($event)">
+            <input type="file" class="custom-file-input" id="cymanFiles" multiple (change)="oncymanFileChange($event)">
             <label class="custom-file-label" for="cymanFiles">Choose CYMAN files</label>
           </div>
           <div class="selected-files">
